<resources>
    <string name="app_name">ActivCount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ActivCount</string>
    <string name="nav_header_subtitle">Specialized Accounting</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_parameters">Parameters</string>

    <string name="menu_about">About</string>
    <string name="menu_data">Data</string>
    <string name="menu_home">Home</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_ratios">Ratios</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="btn_ok">OK</string>
    <string name="btn_data_submit">SUBMIT</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_close">CLOSE</string>
    <string name="btn_post_je">ADD JE</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_init">INITIALIZE</string>
    <string name="status_msg">...</string>

    <string name="app_objective">The aim of this program is to provide condensed visualization of financial information about your business. In addition, program provides: key ratio analysis, forecasting, and pro-forma financial statements \nv.1.2.1 \n\nM060 - 1554 Carling Ave\nOttawa ON K1Z 7M4\n\napp@activcount.ca\n(343) 202 - 2043</string>
    <string name="company_name">Alexandre Comptabilité Spécialisé</string>
    <string name="title_activity_attach_doc">AttachDoc</string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_about_app">About this Application</string>
    <string name="title_activity_journal_app">Journal Entries</string>
    <string name="credits"></string>
    <string name="contact_info_email">books@activcount.ca</string>
    <string name="contact_info_phone">(613) 882-8404</string>
    <string name="contact_info_website">www.activcount.ca</string>

    <string name="ratio_quick">Quick Ratio</string>
    <string name="ratio_quick_def">Liquidity test. Calculated by dividing the most liquid current assets by current liabilities. In general, ratio should at least be equal to 1.</string>

    <string name="ratio_debt_equity">Debt-Equity Ratio</string>
    <string name="ratio_debt_equity_def">Measure that shows the amount of protection available to creditors.</string>

    <string name="data_cash">Cash and Deposits</string>
    <string name="data_inventory">Supplies and Inventory</string>
    <string name="data_total_assets">TOTAL ASSETS</string>
    <string name="data_current_liabilities">Current Liabilities</string>
    <string name="data_long_term_liabilities">Long-Term Liabilities</string>
    <string name="data_total_liabilities">TOTAL LIABILITIES</string>
    <string name="data_net_revenues">Net Revenues</string>
    <string name="data_direct_costs">Direct Costs</string>
    <string name="data_oper_expenses">Operating Expenses</string>

</resources>
