<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_bank"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ratios"
            android:icon="@drawable/icon_ledger"
            android:title="@string/menu_ratios" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_calculator2"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/icon_pencil"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_seal"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
