<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_about">

    <fragment
        android:id="@+id/nav_home"
        android:name="ca.activcount_002.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_home_to_nav_data"
            app:destination="@id/nav_data" />
        <action
            android:id="@+id/action_nav_home_to_nav_ratios"
            app:destination="@id/nav_ratios" />
    </fragment>

    <fragment
        android:id="@+id/nav_journal"
        android:name="ca.activcount_002.ui.journal.JournalFragment"
        android:label="@string/menu_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ca.activcount_002.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ratios"
        android:name="ca.activcount_002.ui.ratios.RatiosFragment"
        android:label="@string/menu_ratios"
        tools:layout="@layout/fragment_ratios" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ca.activcount_002.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ca.activcount_002.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ca.activcount_002.ui.data.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_about"
        android:name="ca.activcount_002.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ca.activcount_002.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ca.activcount_002.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>