<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_ratio_quick_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/ratio_quick"
        app:layout_constraintBottom_toBottomOf="@+id/text_ratio_quick_def"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_ratio_quick_def" />
    <TextView
        android:id="@+id/text_ratio_quick_def"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:width="@dimen/activity_horizontal_margin"
        android:text="@string/ratio_quick_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_ratio_quick_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_debt_equity_ratio_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/ratio_debt_equity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ratio_quick_def" />

    <TextView
        android:id="@+id/text_ratio_debt_equity_def"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:width="@dimen/activity_horizontal_margin"
        android:text="@string/ratio_debt_equity_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_debt_equity_ratio_name"
        app:layout_constraintTop_toBottomOf="@+id/text_ratio_quick_def" />
</androidx.constraintlayout.widget.ConstraintLayout>