<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/dialog_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
            android:hint="ID"
            android:singleLine="true" />
        <EditText
            android:id="@+id/dialog_field_1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:hint="Value"
            android:singleLine="true" />
        <EditText
            android:id="@+id/dialog_field_2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:hint="Description"
            android:singleLine="true" />

        <Button
            android:id="@+id/dialog_btn_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/design_default_color_primary_dark"
            android:clickable="true"
            android:text="@string/btn_update"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/dialog_btn_delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorRed"
            android:clickable="true"
            android:text="@string/btn_delete"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/dialog_btn_close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorGreen"
            android:clickable="true"
            android:text="@string/btn_close"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>